objects/Campaign_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Role__c</fullName>
        <label>Assigned Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Campaign Assignment</label>
</CustomObject>